--- a/Async-Inn/Views/RoomAmenities/Index.cshtml
+++ b/Async-Inn/Views/RoomAmenities/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Async_Inn.Models.HotelRoom>
+﻿@model IEnumerable<Async_Inn.Models.RoomAmenities>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>HotelRooms</h2>
+<h2>Room Amenities</h2>
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
 </nav>
@@ -16,13 +16,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Rate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PetFriendly)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Hotel)
+                @Html.DisplayNameFor(model => model.Amenities)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Room)
@@ -34,13 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Rate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PetFriendly)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Hotel.HotelID)
+                @Html.DisplayFor(modelItem => item.Amenities.AmenitiesID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Room.RoomID)
