--- a/Async-Inn/Views/Rooms/Index.cshtml
+++ b/Async-Inn/Views/Rooms/Index.cshtml
@@ -4,7 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Rooms</h2>
+<nav>
+    <a asp-controller="Home" asp-action="Index">Home</a>
+</nav>
 
 <p>
     <a asp-action="Create">Create New</a>
