--- a/Async-Inn/Views/Home/Index.cshtml
+++ b/Async-Inn/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<h1>Async Inn</h1>
+﻿<link href="~/StyleSheet.css" rel="stylesheet" />
+
+<h1>Async Inn</h1>
+
+<h2>Welcome to the Async</h2>
 
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
