--- a/Async-Inn/Views/RoomAmenities/Index.cshtml
+++ b/Async-Inn/Views/RoomAmenities/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
+<link href="~/StyleSheet.css" rel="stylesheet" />
+
 <h2>Room Amenities</h2>
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
