--- a/Async-Inn/Views/Home/Index.cshtml
+++ b/Async-Inn/Views/Home/Index.cshtml
@@ -1,15 +1,18 @@
-﻿<link href="~/StyleSheet.css" rel="stylesheet" />
+﻿
+
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
 
 <h1>Async Inn</h1>
 
 <h2>Welcome to the Async</h2>
 
 <nav>
-    <a asp-controller="Home" asp-action="Index">Home</a>
-    <a asp-controller="Hotels" asp-action="Index">Hotel</a>
-    <a asp-controller="HotelRooms" asp-action="Index">Hotel Rooms</a>
-    <a asp-controller="Rooms" asp-action="Index">Rooms</a>
-    <a asp-controller="RoomAmenities" asp-action="Index">Room Amenities</a>
-    <a asp-controller="Amenities" asp-action="Index">Amenities</a>
-
+        <a asp-controller="Home" asp-action="Index">Home</a>
+        <a asp-controller="Hotels" asp-action="Index">Hotel</a>
+        <a asp-controller="HotelRooms" asp-action="Index">Hotel Rooms</a>
+        <a asp-controller="Rooms" asp-action="Index">Rooms</a>
+        <a asp-controller="RoomAmenities" asp-action="Index">Room Amenities</a>
+        <a asp-controller="Amenities" asp-action="Index">Amenities</a>
 </nav>
