--- a/Async-Inn/Views/Rooms/Index.cshtml
+++ b/Async-Inn/Views/Rooms/Index.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Rooms</h2>
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
