--- a/Async-Inn/Views/Amenities/Delete.cshtml
+++ b/Async-Inn/Views/Amenities/Delete.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
 
 <h2>Delete</h2>
 
