--- a/Async-Inn/Views/Amenities/Details.cshtml
+++ b/Async-Inn/Views/Amenities/Details.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Details</h2>
 
 <div>
