--- a/Async-Inn/Views/Amenities/Edit.cshtml
+++ b/Async-Inn/Views/Amenities/Edit.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Edit</h2>
 
 <h4>Amenities</h4>
