--- a/Async-Inn/Views/Amenities/Index.cshtml
+++ b/Async-Inn/Views/Amenities/Index.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "Index";
 }
-<link href="~/StyleSheet.css" rel="stylesheet" />
+
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
 
 <h2>Amenities</h2>
 <nav>
