--- a/Async-Inn/Views/HotelRooms/Create.cshtml
+++ b/Async-Inn/Views/HotelRooms/Create.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Create</h2>
 
 <h4>HotelRoom</h4>
@@ -35,6 +39,7 @@
                     <label>
                         <input asp-for="PetFriendly" /> @Html.DisplayNameFor(model => model.PetFriendly)
                     </label>
+                    <input asp-for= "PetFriendly" />
                 </div>
             </div>
             <div class="form-group">
