--- a/Async-Inn/Views/HotelRooms/Index.cshtml
+++ b/Async-Inn/Views/HotelRooms/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<link href="~/StyleSheet.css" rel="stylesheet" />
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
 
 <h2>HotelRooms</h2>
 <nav>
