--- a/Async-Inn/Views/Rooms/Create.cshtml
+++ b/Async-Inn/Views/Rooms/Create.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Create</h2>
 
 <h4>Room</h4>
