--- a/Async-Inn/Views/Rooms/Delete.cshtml
+++ b/Async-Inn/Views/Rooms/Delete.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
+<head>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
