--- a/Async-Inn/Views/Rooms/Index.cshtml
+++ b/Async-Inn/Views/Rooms/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "_Layout";
 }
 
 <head>
@@ -9,9 +10,6 @@
 </head>
 
 <h2>Rooms</h2>
-<nav>
-    <a asp-controller="Home" asp-action="Index">Home</a>
-</nav>
 
 <p>
     <a asp-action="Create">Create New</a>
