--- a/Async-Inn/wwwroot/StyleSheet.css
+++ b/Async-Inn/wwwroot/StyleSheet.css
@@ -1,18 +1,47 @@
 ﻿body {
-    background-color: aliceblue;
+    background-color: #1b3d38;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: auto;
+    background-image: url("cabin_image.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    color: white;
 }
 
-nav a {
-    display: block;
+.header {
+    background-color: #1b3d38;
+    opacity: .8;
+    padding: 30px;
 }
 
-
-.form-group {
-    border: 2px solid black;
+.navigation li {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 50px;
+}
+
+a {
+    color: white;
+    padding: 5px;
+}
+
+table {
+    background-color: #1b3d38;
+    opacity: .8;
+    padding: 50px;
+    margin: 0 auto;
+}
+
+th {
+    padding: 5px 15px;
+}
+
+td {
+    padding: 5px 15px;
 }
