--- a/Async-Inn/Views/HotelRooms/Index.cshtml
+++ b/Async-Inn/Views/HotelRooms/Index.cshtml
@@ -5,10 +5,6 @@
     Layout = "_Layout";
 }
 
-<head>
-    <link href="~/StyleSheet.css" rel="stylesheet" />
-</head>
-
 <h2>HotelRooms</h2>
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
@@ -45,15 +41,10 @@
                 @Html.DisplayFor(modelItem => item.PetFriendly)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Hotel.HotelID)
+                @Html.DisplayFor(modelItem => item.Hotel.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Room.RoomID)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.DisplayFor(modelItem => item.Room.Name)
             </td>
         </tr>
 }
