--- a/Async-Inn/Views/RoomAmenities/Index.cshtml
+++ b/Async-Inn/Views/RoomAmenities/Index.cshtml
@@ -5,10 +5,6 @@
     Layout = "_Layout";
 }
 
-<head>
-    <link href="~/StyleSheet.css" rel="stylesheet" />
-</head>
-
 <h2>Room Amenities</h2>
 <nav>
     <a asp-controller="Home" asp-action="Index">Home</a>
@@ -33,15 +29,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Amenities.AmenitiesID)
+                @Html.DisplayFor(modelItem => item.Amenities.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Room.RoomID)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.DisplayFor(modelItem => item.Room.Name)
             </td>
         </tr>
 }
